# beacon

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
docs/: integration-guide.md  meta-tools.md
mock-servers/mock-notes/: Dockerfile  server.py
mock-servers/mock-tasks/: Dockerfile  requirements.txt  server.py
sdk/node/: mcp-announce.js
sdk/python/: pyproject.toml
sdk/python/mcp_announce/: __init__.py  listener.py
src/mcp_aggregator/: annotations.py  discovery.py  external.py  main.py  mcp_client.py  mcp_proxy.py  registry.py
src/mcp_aggregator/web/: api.py
src/mcp_aggregator/web/static/: app.js  index.html  style.css
