[project]
name = "mcp-aggregator"
version = "0.1.0"
description = "Local-only MCP aggregator with UDP broadcast discovery"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.26.0",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
